--- a/Models/SpeechLM/2025.01.20_MinMo.md
+++ b/Models/SpeechLM/2025.01.20_MinMo.md
@@ -79,10 +79,26 @@ The ***MinMo*** project web page is [this https URL](https://funaudiollm.github.
 
 ## 6·Conclusions: 结论
 
-This research introduces MinMo, an advanced multimodal large language model designed to overcome the limitations of existing aligned multimodal models in seamless voice interaction. Trained on an extensive dataset of over 1.4 million hours of speech, MinMo showcases state-of-the-art performance across diverse benchmarks, including spoken dialogue, multilingual speech recognition, and emotion recognition. By leveraging a multi-stage alignment strategy, MinMo adeptly balances audio understanding and generation while minimizing the catastrophic forgetting often observed in text-based LLMs.
-A key innovation is MinMo's novel alignment method for streaming end-to-end audio generation. By utilizing hidden layer representations of the text model, MinMo’s voice decoder achieves structural simplicity and competitive performance with low latency. This approach significantly enhances the model’s instruction-following capabilities, enabling nuanced speech generation that accurately reflects user-specified emotions, dialects, and speaking styles. Furthermore, MinMo supports full-duplex interactions, facilitating a seamless conversational experience with a latency of approximately 600ms.
-In conclusion, MinMo represents a substantial advancement in the field of voice interaction systems. It not only addresses the inherent challenges of sequence length discrepancies and data imbalance but also sets a new standard for natural and expressive voice interactions, paving the way for future developments in multimodal language models.
+This research introduces ***MinMo***, an advanced multimodal large language model designed to overcome the limitations of existing aligned multimodal models in seamless voice interaction.
+Trained on an extensive dataset of over 1.4 million hours of speech, ***MinMo*** showcases state-of-the-art performance across diverse benchmarks, including spoken dialogue, multilingual speech recognition, and emotion recognition.
+By leveraging a multi-stage alignment strategy, ***MinMo*** adeptly balances audio understanding and generation while minimizing the catastrophic forgetting often observed in text-based LLMs.
+A key innovation is ***MinMo***'s novel alignment method for streaming end-to-end audio generation.
+By utilizing hidden layer representations of the text model, ***MinMo***’s voice decoder achieves structural simplicity and competitive performance with low latency.
+This approach significantly enhances the model’s instruction-following capabilities, enabling nuanced speech generation that accurately reflects user-specified emotions, dialects, and speaking styles.
+Furthermore, ***MinMo*** supports full-duplex interactions, facilitating a seamless conversational experience with a latency of approximately 600ms.
+In conclusion, ***MinMo*** represents a substantial advancement in the field of voice interaction systems.
+It not only addresses the inherent challenges of sequence length discrepancies and data imbalance but also sets a new standard for natural and expressive voice interactions, paving the way for future developments in multimodal language models.
 
 ### Limitations: 局限性
 
-MinMo has certain limitations that need to be addressed. Firstly, MinMo integrates audio understanding and audio generation capabilities based on a pre-trained text large model by using alignment. The text large model only participates in LoRA updates, and its ability to follow diverse instructions, such as language and task following, needs improvement. Further exploration is needed to determine whether using more high-quality text data for more comprehensive updates of the text large model can enhance its instruction-following ability. Secondly, there are some long-tail pronunciation error issues in MinMo's end-to-end audio generation. This problem partly arises from retaining some one-to-many tokens of the LLM, and partly because some special symbols in the end-to-end modeled output text cannot be effectively converted into speech. Data scaling can be explored to address these long-tail issues. Additionally, the overall efficiency of audio generation controlled by instructions in MinMo needs to be improved. This is partly due to the overall small size of the current instruction data and the limitation of only using hidden embeddings for end-to-end alignment, which restricts the transmission of historical information. Finally, while MinMo implements a duplex module based on semantics, it still requires separate AEC and VAD modules. In the future, a fully end-to-end duplex model will be explored.
+***MinMo*** has certain limitations that need to be addressed.
+Firstly, ***MinMo*** integrates audio understanding and audio generation capabilities based on a pre-trained text large model by using alignment.
+The text large model only participates in LoRA updates, and its ability to follow diverse instructions, such as language and task following, needs improvement.
+Further exploration is needed to determine whether using more high-quality text data for more comprehensive updates of the text large model can enhance its instruction-following ability.
+Secondly, there are some long-tail pronunciation error issues in ***MinMo***'s end-to-end audio generation.
+This problem partly arises from retaining some one-to-many tokens of the LLM, and partly because some special symbols in the end-to-end modeled output text cannot be effectively converted into speech.
+Data scaling can be explored to address these long-tail issues.
+Additionally, the overall efficiency of audio generation controlled by instructions in ***MinMo*** needs to be improved.
+This is partly due to the overall small size of the current instruction data and the limitation of only using hidden embeddings for end-to-end alignment, which restricts the transmission of historical information.
+Finally, while ***MinMo*** implements a duplex module based on semantics, it still requires separate AEC and VAD modules.
+In the future, a fully end-to-end duplex model will be explored.
