--- a/Models/SpeechLM/2025.01.20_MinMo.md
+++ b/Models/SpeechLM/2025.01.20_MinMo.md
@@ -54,6 +54,9 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 Recent advancements in large language models (LLMs) and multimodal speech-text models have laid the groundwork for seamless voice interactions, enabling real-time, natural, and human-like conversations.
 Previous models for voice interactions are categorized as native and aligned.
 Native models integrate speech and text processing in one framework but struggle with issues like differing sequence lengths and insufficient pre-training.
@@ -66,6 +69,27 @@ Moreover, we propose a novel and simple voice decoder that outperforms prior mod
 The enhanced instruction-following capabilities of ***MinMo*** supports controlling speech generation based on user instructions, with various nuances including emotions, dialects, and speaking rates, and mimicking specific voices.
 For ***MinMo***, the speech-to-text latency is approximately 100ms, full-duplex latency is approximately 600ms in theory and 800ms in practice.
 The ***MinMo*** project web page is [this https URL](https://funaudiollm.github.io/minmo), and the code and models will be released soon.
+
+</details>
+<br>
+
+在大语言模型和多模态语音-文本模型的最新进展为无缝声音交互奠定了基础, 实现了实时, 自然, 人类般的对话.
+以前的声音交互模型可以分为**原生模型 (Native Models)** 和**对齐模型 (Aligned Models)**.
+- **原生模型 (Native Models)** 在一个框架中集成了语音和文本处理, 但存在如序列长度差异和预训练不足的问题.
+- **对齐模型 (Aligned Models)** 保持了文本大语言模型的能力, 通常但受限于小数据集和语音任务的狭窄关注.
+
+本文介绍了 ***MinMo***, 一个多模态大语言模型, 具有约 8B 参数, 用于无缝声音交互.
+我们解决了先前多模态**对齐模型**的主要局限.
+我们在 1.4 百万小时 (1400 K Hours) 的多样语音数据和广泛的语音任务上对 ***MinMo*** 进行多阶段训练: 语音到文本对齐, 文本到语音对齐, 语音到语音对齐和双工交互对齐.
+
+经过多阶段训练后, ***MinMo*** 实现了声音理解和生成的 SoTA 性能, 同时保持了文本大语言模型的能力, 并支持全双工对话, 即用户和系统之间可以同时进行双向通信.
+
+此外, 我们提出了一个新式且简单的声音解码器, 在声音生成方面超过了先前模型.
+
+***MinMo*** 的增强指令跟随能力支持根据用户指令控制语音生成, 包括情感, 方言, 以及语速等多种细微差别, 还可以模仿特定的声音.
+
+***MinMo*** 的语音到文本延迟大约为 100ms, 全双工延迟大约为 600ms (理论值) 和 800ms (实际值).
+***MinMo*** 项目网页为 [https://funaudiollm.github.io/minmo](https://funaudiollm.github.io/minmo), 代码和模型将很快发布.
 
 ## 1·Introduction: 引言
 
