add MinMo RelatedWork

--- a/Models/SpeechLM/2025.01.20_MinMo.md
+++ b/Models/SpeechLM/2025.01.20_MinMo.md
@@ -103,8 +103,10 @@ Facilitating seamless voice interaction poses great challenges:
 In recent years, seamless voice interaction systems have gained significant momentum, especially with the advancements in multimodal large language models, such as GPT-4o~\citep{hurst2024gpt} and Moshi~\citep{DBLP:journals/corr/abs-2410-00037}.
 These systems not only produce natural and expressive speech but also understand cues beyond words, including emotional tones and audio events.
 Current multimodal language models for voice interaction can be categorized into two main categories.
-The first category includes \textit{native multimodal models}, such as Moshi~\citep{DBLP:journals/corr/abs-2410-00037} and GLM-4-Voice~\citep{zeng2024glm}.  These models typically use a decoder-only Transformer as the backbone to simultaneously model understanding and generation of both speech and text modalities within a single framework; they usually require pre-training with both speech and text data.
-These models suffer from two major limitations.  Firstly, after speech discretization, speech token sequences are often more than twice the length of text (e.g., 12.5 tokens per second in Moshi).
+The first category includes \textit{native multimodal models}, such as Moshi~\citep{DBLP:journals/corr/abs-2410-00037} and GLM-4-Voice~\citep{zeng2024glm}.
+These models typically use a decoder-only Transformer as the backbone to simultaneously model understanding and generation of both speech and text modalities within a single framework; they usually require pre-training with both speech and text data.
+These models suffer from two major limitations.
+Firstly, after speech discretization, speech token sequences are often more than twice the length of text (e.g., 12.5 tokens per second in Moshi).
 This discrepancy in sequence length poses challenges as model sizes grow, such as the 175B GPT-3~\citep{DBLP:conf/nips/BrownMRSKDNSSAA20}.
 Secondly, the scarcity of speech data compared to text leads to highly imbalanced speech-text training data and in turn causes catastrophic forgetting~\citep{wang2024freeze}.
 
@@ -140,6 +142,74 @@ Specifically, we implement a full-duplex prediction module that harnesses the te
 For ***MinMo***, the speech-to-text latency is approximately 100ms; the full-duplex latency is approximately 600ms in theory and 800ms in practice.
 
 ## 2·Related Works: 相关工作
+
+### Multimodal Spoken Dialogue Models: 多模态口语对话模型
+
+A variety of speech foundation models have been developed for generic audio understanding, but not systematically explored for voice interaction.
+For example, Qwen2-Audio \citep{chu2024qwen2} integrates Whisper speech encoder with a pre-trained text LLM and adapts the LLM for speech understanding capabilities through multi-task pre-training and instruction-based supervised fine-tuning.
+SALMONN~\citep{salmonn} is another speech-text LLM for generic audio understanding, by integrating separate speech and audio encoders with a pre-trained text LLM through Q-Former and adopting LoRA for modality alignment.
+
+Since this work aims to develop an end-to-end multimodal model for seamless voice interaction, we focus on comparing ***MinMo*** to speech-text models for voice interaction (or called multimodal spoken dialogue models).
+Contemporaneously or inspired by GPT-4o, there have been active developments of multimodal spoken dialogue models managing to achieve real-time voice conversations with user.
+\citep{DBLP:journals/corr/abs-2411-13577} provides an in-depth overview of recent spoken dialogue models.
+Some works support traditional turn-based voice chat (i.e., half-duplex communication), but cannot handle full-duplex voice interaction (i.e., simultaneous two-way communication).
+These models include collaborative systems and end-to-end frameworks.
+PSLM~\citep{DBLP:conf/emnlp/MitsuiMWHS24} is a collaborative system since it replies on ASR to process audio input, which discards paralinguistic information and causes error propagation.
+PSLM generates speech and text tokens in parallel hence it reduces the speech generation latency; however, it suffers from reduced response quality.
+Different from the collaborative systems such as PSLM, end-to-end frameworks directly accept audio input and generate audio output.
+Llama-Omni~\citep{DBLP:journals/corr/abs-2409-06666} and Mini-Omni~\citep{xie2024mini} are two recent end-to-end frameworks that have not been trained for full-duplex communication.
+Llama-Omni integrates Whisper speech encoder, speech adapter, streaming speech decoder, and vocoder with a pre-trained text LLM backbone.
+The speech decoder generates discrete units corresponding to generated text prefix in an NAR manner.
+The model is trained with a two-stage strategy: in the first stage, the speech encoder is frozen, and the speech adapter and LLM are trained autoregressively; in the second stage, the speech encoder, speech adapter, and LLM are frozen and only the speech decoder is trained using the CTC loss.
+Llama-Omni is evaluated on speech-to-text instruction-following and speech-to-speech instruction-following tasks.
+Mini-Omni also adopts Whisper encoder and uses adapter for minimal training in order to reserve LLM's capabilities.
+The model is trained through three stages of modality alignment, adapter training, and multi-modal fine-tuning.
+Mini-Omni simultaneously generates text and audio tokens, while padding N tokens to ensure that the corresponding text tokens are produced first to guide audio token generation.
+
+Our ***MinMo*** facilitates full-duplex spoken dialogues.
+Existing full-duplex voice chat systems can also be categorized into collaborative systems and end-to-end models.
+Among collaborative systems, VITA~\citep{DBLP:journals/corr/abs-2408-05211} runs two models at the same time, namely, the generation model and the monitoring model, to support full-duplex communication.
+When the generation model is generating system response, the monitoring model monitors the environment and once it detects effective user interruption, it combines context and provides response to the new user query, while the generation model pauses and switches to the monitoring role.
+Notably, VITA still relies on an external TTS module to generate speech output.
+Alternatively, another collaborative system~\citep{DBLP:journals/corr/abs-2405-19487} operates with LLM interfacing with an ASR module and a streaming TTS module.
+The system does not require modality alignment; instead, supervised fine-tuning is conducted on a pre-trained text LLM with the following paradigm: At each time step, the LLM either processes an input token, or generates a text token, or outputs a special control token for state transitions between SPEAK and LISTEN.
+All these tasks are defined as next token prediction on a serialized, single-stream view of dialogues.
+Full-duplex dialogue learning is conducted on data synthesized by GPT-4 to generate dialogues with different types of user interruptions.
+Notably, with its cascaded architecture, this system suffers from high latency up to 680ms.
+
+Among end-to-end full-duplex models, the early work of dGSLM~\citep{DBLP:journals/corr/abs-2203-16502} proposes a Siamese architecture to jointly process both audio token streams of user speech and system speech.
+However, it suffers from several weaknesses: it relies on speech-only training, hence does not leverage capabilities of a pre-trained text LLM; it only uses semantic tokens, hence does not sufficiently model acoustic information; it does not support online mode.
+LSLM~\citep{DBLP:journals/corr/abs-2408-02622} uses a decoder-only Transformer to generate speaking tokens and a streaming SSL encoder to process listening tokens.
+It introduces an interruption token to stop speaking when detecting a turn-taking attempt from the user.
+However, the model is insufficient in generating reasonable responses.
+Among the more recent end-to-end full-duplex models, Moshi~\citep{DBLP:journals/corr/abs-2410-00037}, GLM-4-Voice~\citep{zeng2024glm}, SyncLM~\citep{DBLP:conf/emnlp/VeluriPYGG24}, IntrinsicVoice~\citep{DBLP:journals/corr/abs-2410-08035}, and Omni-Flatten~\citep{DBLP:journals/corr/abs-2410-17799} are \textit{native multimodal models}.
+They simultaneously model understanding and generation of both speech and text modalities within a single framework, based on a GPT backbone, and require self-supervised autoregressive pre-training using both speech and text data.
+As discussed in Section~\ref{sec:intro}, these native multimodal models need to tackle the challenges due to significant discrepancy between sequence lengths of speech tokens and text tokens, and also highly imbalanced speech-text training data and the resulting catastrophic forgetting.
+IntrinsicVoice employs a GroupFormer to generate HuBERT tokens from the LLM’s hidden states, effectively shortening speech sequences to lengths comparable to text sequences.
+OmniFlatten utilizes a multi-stage progressive post-training strategy that incorporates a chunk-based flattened single stream of speech tokens and text tokens to learn full-duplex and text-free speech-to-speech interaction.
+Different from these native multimodal models, our ***MinMo*** is in the category of \textit{aligned multimodal models}, which also include Llama-Omni, Mini-Omni2 \citep{xie2024mini}, and Freeze-Omni~\citep{wang2024freeze}.
+Aligned multimodal models integrate voice capabilities while aiming to maintain the capabilities of the existing pre-trained text LLM.
+Mini-Omni2 introduces a command-based interruption mechanism for supporting full-duplex conversation; however, it is only evaluated on the ASR task and compared to Whisper, VITA, and Mini-Omni.
+Freeze-Omni~\citep{wang2024freeze} is a speech-to-speech model that freezes the pre-trained text LLM to reserve the LLM's capabilities.
+It supports streaming input speech and generates streaming output speech, uses multi-task training, and conducts chunk-level state prediction for modeling full-duplex voice interaction.
+Our ***MinMo*** differs from these aligned multimodal models in the following ways.
+We explore training ***MinMo*** on much larger speech datasets (1.4 million hours of diverse speech data in contrast to 200K samples for LLaMA-Omni and 120K hours for Freeze-Omni) and on much more extensive speech tasks.
+***MinMo*** also differs from existing aligned multimodal models with a novel speech decoder, enhanced instruction following capabilities, and systematic training and evaluation of full-duplex spoken conversation capabilities.
+
+### Text Style-Controllable Speech Synthesis: 文本风格可控语音合成
+
+A distinctive feature of multimodal spoken dialogue models, compared to text-based dialogue models, is their ability to comprehend and generate acoustic information beyond mere textual content.
+The speech modality not only contains the content but also acoustic information such as emotion, dialect, and speaking rate.
+An intelligent multimodal spoken dialogue model should be able to comprehensively understand the acoustic information in input speech (e.g., emotion) and also ideally generate responses with specified emotions, dialects, and speaking rate, as well as mimicking specific voices, so that the system can achieve a deeper level of understanding and response in communication.
+Collaborative systems, such as ParalinGPT~\citep{DBLP:conf/icassp/LinSGYGGSLB24}, E-Chat~\citep{DBLP:journals/corr/abs-2401-00475}, and Spoken-LLM~\citep{DBLP:conf/acl/LinCL24}, incorporate paralinguistic features to enhance the understanding of acoustic information such as emotions.
+These systems can be cascaded with a style-controllable Text-to-Speech (TTS) system to generate responses with specific emotion, speaking rate, and volume.
+Significant progresses have been made in text-style controllable TTS, such as TextrolSpeech~\citep{DBLP:conf/icassp/JiZ00CDHZ24}, PromptTTS~\citep{DBLP:conf/icassp/ShimizuYKSDKT24}, PromptTTS2~\citep{DBLP:conf/iclr/LengGSJ0LLYZS0024}, InstructTTS~\citep{DBLP:journals/taslp/YangLHWM24}, and ControlSpeech~\citep{DBLP:journals/corr/abs-2406-01205}.
+In contrast to these collaborative systems, Moshi~\citep{DBLP:journals/corr/abs-2410-00037} uses a TTS engine with a single actor's voice and recorded monologues in over 70 speaking styles to synthesize training data to support understanding and generation of acoustic information in an end-to-end model.
+GLM-4-Voice~\citep{zeng2024glm} employs high-quality, multi-turn spoken dialogues tailored to specific speech style requirements, such as speaking rate, emotion, or dialect, to support style-controllable spoken dialogues.
+However, to the best of our knowledge, no previous work has demonstrated that aligned multimodal models can support style-controllable voice generation.
+Contrary to previous claims that aligned multimodal models such as Llama-Omni and Freeze-Omni only allow language models to control the content of speech but not the style and prosody~\citep{zeng2024glm}, in this work, we propose a novel streaming voice decoder for the aligned multimodal model .
+***MinMo*** and find that this decoder enhances instruction-following capabilities and enables .
+***MinMo*** to generate speech corresponding to user-specified emotions, dialects, speaking rates, as well as mimicking specific voices.
 
 ## 3·Methodology: 方法
 
