--- a/Models/SpeechLM/2025.01.20_MinMo.md
+++ b/Models/SpeechLM/2025.01.20_MinMo.md
@@ -222,30 +222,45 @@ Table.01 provides detailed descriptions of each module in ***MinMo***.
 The **Voice Encoder** is initialized with the pretrained SenseVoice-large encoder module \citep{DBLP:journals/corr/abs-2407-04051}, which provides robust voice understanding capabilities and supports multilingual speech recognition, emotion recognition, and audio event detection.
 The **Input Projector** consists of a randomly initialized two-layer Transformer combined with a CNN layer for dimensional alignment and downsampling.
 We use the [pretrained Qwen2.5-7B-instruct model [URL]](https://huggingface.co/Qwen/Qwen2.5-7B-Instruct) ~\citep{qwen2.5} as the pre-trained text LLM, due to its outstanding performance on various benchmarks~\citep{qwen2.5}.
-We utilize the streaming audio generation mechanism of CosyVoice 2~\citep{du2024cosyvoice2scalablestreaming}, due to its low latency and competitive speech synthesis performance. For every batch of five text tokens received, we pass these tokens and their corresponding final hidden layer vectors simultaneously to the **Output Projector** and the **Voice Token LM**.
+We utilize the streaming audio generation mechanism of CosyVoice 2~\citep{du2024cosyvoice2scalablestreaming}, due to its low latency and competitive speech synthesis performance.
+For every batch of five text tokens received, we pass these tokens and their corresponding final hidden layer vectors simultaneously to the **Output Projector** and the **Voice Token LM**.
 The **Output Projector** is a single-layer linear module randomly initialized for dimensional alignment.
 The **Voice Token LM** uses the pretrained CosyVoice 2 LM module.
-The **Voice Token LM** then autoregressively generates fifteen speech tokens, ensuring efficient and seamless audio synthesis. These audio tokens are processed in real time by the **Token2wav Synthesizer** module to produce the final audio output.
+The **Voice Token LM** then autoregressively generates fifteen speech tokens, ensuring efficient and seamless audio synthesis.
+These audio tokens are processed in real time by the **Token2wav Synthesizer** module to produce the final audio output.
 The **Token2wav Synthesizer** comprises a pretrained flow-matching model, which converts tokens to mel spectrograms, and a pretrained vocoder, which transforms mel spectrograms into waveforms, both sourced from CosyVoice 2.
-***MinMo*** is fully trained end-to-end using additional hidden embeddings, which facilitate control of speech styles, such as emotion, dialect, and speaking rate, based on user instructions. Details of voice generation are elaborated in Section~\ref{sec:voice_decoder}. The **Full Duplex Predictor** module
+***MinMo*** is fully trained end-to-end using additional hidden embeddings, which facilitate control of speech styles, such as emotion, dialect, and speaking rate, based on user instructions.
+Details of voice generation are elaborated in Section~\ref{sec:voice_decoder}.
+The **Full Duplex Predictor** module
 consists of a single-layer Transformer and a linear softmax output layer, both randomly initialized.
-This module performs real-time prediction on whether to engage with user commands or temporarily halt the ongoing system broadcast to allow for processing further audio input from the user. Once the Full Duplex Predictor decides that a system response is appropriate, ***MinMo*** produces text outputs and concurrently generates the audio tokens in a token-by-token manner.
+This module performs real-time prediction on whether to engage with user commands or temporarily halt the ongoing system broadcast to allow for processing further audio input from the user.
+Once the Full Duplex Predictor decides that a system response is appropriate, ***MinMo*** produces text outputs and concurrently generates the audio tokens in a token-by-token manner.
 
-***MinMo*** has approximately 8 billion parameters in total. The training procedure of ***MinMo*** is detailed in Section~\ref{sec:minmo_training}.
+***MinMo*** has approximately 8 billion parameters in total.
+The training procedure of ***MinMo*** is detailed in Section~\ref{sec:minmo_training}.
 The end-to-end latency from receiving the user's audio input to delivering the audio response is approximately 600 ms, when tested on the L20 GPU.
 
 ### Streaming Voice Decoder: 流式声音解码器
 
-To facilitate natural voice responses for MinMo, we introduce a novel voice decoder that transforms textual outputs from an LLM into speech. As illustrated at the top of Figure.03, our voice decoder comprises three components: **an output projector**, **a voice token language model (LM)**, and **a streaming token-to-wave (token2wav) synthesizer**.
+To facilitate natural voice responses for MinMo, we introduce a novel voice decoder that transforms textual outputs from an LLM into speech.
+As illustrated at the top of Figure.03, our voice decoder comprises three components: **an output projector**, **a voice token language model (LM)**, and **a streaming token-to-wave (token2wav) synthesizer**.
 
-The output projector aligns the dimensions of the LLM with those of the voice decoder. The hidden states from the LLM contain rich contextual information but are semantically ambiguous; whereas, the sampled text tokens are more precise and consistent with the generated text.
+The output projector aligns the dimensions of the LLM with those of the voice decoder.
+The hidden states from the LLM contain rich contextual information but are semantically ambiguous; whereas, the sampled text tokens are more precise and consistent with the generated text.
 Meanwhile, the hidden states of the current round of user input contain explicit instruction information.
-For every dialog turn, the embeddings of user input, and hidden states of the LLM’s last layer output will be concatenated along the feature dimension to form the query embeddings. The query embeddings, and embeddings of five sampled text tokens along with the hidden states of the LLM’s last layer output will be concatenated along the sequence dimension and fed into the projector.
+For every dialog turn, the embeddings of user input, and hidden states of the LLM’s last layer output will be concatenated along the feature dimension to form the query embeddings.
+The query embeddings, and embeddings of five sampled text tokens along with the hidden states of the LLM’s last layer output will be concatenated along the sequence dimension and fed into the projector.
 In this report, the projector’s outputs are referred to as **semantic vectors**, which represent rich and accurate semantic information.
 
-Following the output projector, a voice token LM is employed to generate speech tokens autoregressively. This LM operates on sequences interleaving text and speech tokens. Specifically, we intermix the semantic vectors and speech tokens in a fixed ratio of 5:15, that is,  every five semantic vectors are followed by fifteen speech tokens. During training, a teacher forcing strategy is applied, and a special token is introduced to signal that the next semantic vectors should be concatenated. Once the LLM's textual response is complete and the semantic vectors are exhausted, we insert a "turn of speech" token to signal the voice token LM that subsequent tokens should be speech tokens exclusively. The speech synthesis process concludes when the "end of speech" token is generated.
+Following the output projector, a voice token LM is employed to generate speech tokens autoregressively.
+This LM operates on sequences interleaving text and speech tokens.
+Specifically, we intermix the semantic vectors and speech tokens in a fixed ratio of 5:15, that is,  every five semantic vectors are followed by fifteen speech tokens.
+During training, a teacher forcing strategy is applied, and a special token is introduced to signal that the next semantic vectors should be concatenated.
+Once the LLM's textual response is complete and the semantic vectors are exhausted, we insert a "turn of speech" token to signal the voice token LM that subsequent tokens should be speech tokens exclusively.
+The speech synthesis process concludes when the "end of speech" token is generated.
 
-For reconstructing waveforms from the speech tokens, we utilize an off-the-shelf streaming token2wav synthesizer, as described by~\citet{du2024cosyvoice2scalablestreaming}. The token2wav synthesizer incorporates a chunk-aware flow matching model and a mel-to-wave vocoder, capable of synthesizing waveforms in chunks of fifteen tokens.
+For reconstructing waveforms from the speech tokens, we utilize an off-the-shelf streaming token2wav synthesizer, as described by~\citet{du2024cosyvoice2scalablestreaming}.
+The token2wav synthesizer incorporates a chunk-aware flow matching model and a mel-to-wave vocoder, capable of synthesizing waveforms in chunks of fifteen tokens.
 
 The theoretical latency of the voice decoder can be computed as follows:
 
@@ -257,30 +272,50 @@ where $d_{llm}$ denotes the computation time for the LLM to generate one text to
 
 ### Tasks & Training Data: 任务和训练数据
 
-The training tasks for MinMo consist of four categories, including **Speech-to-Text**, **Text-to-Speech**, **Speech-to-Speech**, and **Speech-to-ControlToken** tasks. The specific tasks within each category and their corresponding data scales are presented in Table.02.
+The training tasks for MinMo consist of four categories, including **Speech-to-Text**, **Text-to-Speech**, **Speech-to-Speech**, and **Speech-to-ControlToken** tasks.
+The specific tasks within each category and their corresponding data scales are presented in Table.02.
 
 #### Speech-to-Text Tasks
 
 This category consists of approximately 1.2 million hours of speech-text paired data, including tasks such as automatic speech recognition (ASR), speech-to-text translation (S2TT), language identification (LID), contextual biasing speech recognition, speech emotion recognition (SER), audio event detection (AED), speaker analysis, spoken language smoothing.
 The training data for these tasks is organized in the ChatML format, illustrated by the following example:
 
-Here, `task_instruction` corresponds to the natural language descriptions for different speech-to-text tasks. For instance, `Speech Transcription` may be used for speech recognition tasks, while `Translate {SRC_LANG} into {TGT_LANG}` may be used for speech translation tasks. `wav_path` refers to the input audio file path, while `task_output` refers to the output of each task.
+Here, `task_instruction` corresponds to the natural language descriptions for different speech-to-text tasks.
+For instance, `Speech Transcription` may be used for speech recognition tasks, while `Translate {SRC_LANG} into {TGT_LANG}` may be used for speech translation tasks.
+`wav_path` refers to the input audio file path, while `task_output` refers to the output of each task.
 
 #### Text-to-Speech Tasks
 
-The data for this category mainly consists of basic speech synthesis data, which is the same data used for training CosyVoice 2. It includes 170,000 hours of text-speech paired data and supports four languages: Chinese, English, Korean, and Japanese. Additionally, there are approximately 1,000 hours of audio generation data controlled by instructions. The instructions are expanded to include natural language descriptions, generated by Qwen-Max\footnote{\url{https://help.aliyun.com/zh/model-studio/developer-reference/use-qwen-by-calling-api}}, utilizing human-labeled attributes such as emotion, speaking rate, dialect, and role-playing.
+The data for this category mainly consists of basic speech synthesis data, which is the same data used for training CosyVoice 2.
+It includes 170,000 hours of text-speech paired data and supports four languages: Chinese, English, Korean, and Japanese.
+Additionally, there are approximately 1,000 hours of audio generation data controlled by instructions.
+The instructions are expanded to include natural language descriptions, generated by Qwen-Max\footnote{\url{https://help.aliyun.com/zh/model-studio/developer-reference/use-qwen-by-calling-api}}, utilizing human-labeled attributes such as emotion, speaking rate, dialect, and role-playing.
 
 #### Speech-to-Speech Tasks
 
-The Speech-to-Speech data is primarily sourced through simulation, encompassing approximately 10,000 hours of multi-turn conversational speech and 100 hours of style-controllable multi-turn conversational speech. The method for simulating speech-to-speech chat data is as follows:
+The Speech-to-Speech data is primarily sourced through simulation, encompassing approximately 10,000 hours of multi-turn conversational speech and 100 hours of style-controllable multi-turn conversational speech.
+The method for simulating speech-to-speech chat data is as follows:
 
-- For text chat data primarily sourced from Alpaca~\citep{alpaca} and ShareGPT\footnote{\url{https://sharegpt.com/}}, we utilize the zero-shot in-context generation method from CosyVoice~\citep{DBLP:journals/corr/abs-2407-05407} to convert user text into user speech. We fine-tune CosyVoice's base model with 2 hours of data from a selected speaker to create a speech synthesis model for the target speaker, referred to as \textit{CosyVoice-SFT}. This model synthesizes the assistant's speech (i.e., system speech). The advantage of using zero-shot in-context generation for user speech synthesis is its ability to ensure diversity in the generated user speech, thereby enhancing the generalizability of MinMo.
-- To address the differences between synthesized and real audio, we select suitable real speech from the ASR data as user speech queries and use the corresponding text as input for Qwen-Max to generate response text, which is then synthesized into assistant speech using the CosyVoice-SFT model. This approach further enhances the model's robustness to real user audio inputs.
-- To generate conversational speech that covers different speaking styles, we initially employ Qwen-Max to create a rich collection of style-controllable, multi-turn text dialogues. User queries are converted into speech using zero-shot generation by Cosyvoice. Subsequently, we employ Cosyvoice 2 to generate the assistant's expressive speech. Specifically, we input the assistant's response content along with an instructional prompt into Cosyvoice 2 to synthesize speech in specific styles. Additionally, a small, diverse, and preliminary recorded voice corpus is used as prompt speech to synthesize the expressive response speech by zero-shot generation. The former method enhances the diversity of the simulated speech, while the latter more effectively builds the expressiveness of various styles.
+- For text chat data primarily sourced from Alpaca~\citep{alpaca} and ShareGPT\footnote{\url{https://sharegpt.com/}}, we utilize the zero-shot in-context generation method from CosyVoice~\citep{DBLP:journals/corr/abs-2407-05407} to convert user text into user speech.
+We fine-tune CosyVoice's base model with 2 hours of data from a selected speaker to create a speech synthesis model for the target speaker, referred to as \textit{CosyVoice-SFT}.
+This model synthesizes the assistant's speech (i.e., system speech).
+The advantage of using zero-shot in-context generation for user speech synthesis is its ability to ensure diversity in the generated user speech, thereby enhancing the generalizability of MinMo.
+- To address the differences between synthesized and real audio, we select suitable real speech from the ASR data as user speech queries and use the corresponding text as input for Qwen-Max to generate response text, which is then synthesized into assistant speech using the CosyVoice-SFT model.
+This approach further enhances the model's robustness to real user audio inputs.
+- To generate conversational speech that covers different speaking styles, we initially employ Qwen-Max to create a rich collection of style-controllable, multi-turn text dialogues.
+User queries are converted into speech using zero-shot generation by Cosyvoice.
+Subsequently, we employ Cosyvoice 2 to generate the assistant's expressive speech.
+Specifically, we input the assistant's response content along with an instructional prompt into Cosyvoice 2 to synthesize speech in specific styles.
+Additionally, a small, diverse, and preliminary recorded voice corpus is used as prompt speech to synthesize the expressive response speech by zero-shot generation.
+The former method enhances the diversity of the simulated speech, while the latter more effectively builds the expressiveness of various styles.
 
 #### Speech-to-ControlToken Task
 
-The Speech-to-ControlToken data primarily consists of two parts. The first part is extracted from existing \textit{real} voice interaction data, while the second part is \textit{simulated} using text dialogue data. Specifically, the existing real voice interaction data includes resources such as Alimeeting~\citep{yu2022m2met}, Fisher~\citep{cieri2004fisher}, and our in-house voice interaction data, a total of approximately 3000 hours. The simulated data mainly includes the open-source MOSS dataset~\citep{sun2024moss} and spoken dialogues by synthesizing our in-house text dialogue data, yielding about 1000 hours of voice chat data. When constructing duplex training data using these voice interaction data, we apply heuristic rules for automatically annotating duplex labels on the samples, as follows.
+The Speech-to-ControlToken data primarily consists of two parts.
+The first part is extracted from existing \textit{real} voice interaction data, while the second part is \textit{simulated} using text dialogue data.
+Specifically, the existing real voice interaction data includes resources such as Alimeeting~\citep{yu2022m2met}, Fisher~\citep{cieri2004fisher}, and our in-house voice interaction data, a total of approximately 3000 hours.
+The simulated data mainly includes the open-source MOSS dataset~\citep{sun2024moss} and spoken dialogues by synthesizing our in-house text dialogue data, yielding about 1000 hours of voice chat data.
+When constructing duplex training data using these voice interaction data, we apply heuristic rules for automatically annotating duplex labels on the samples, as follows.
 
 - For assistant's turn-taking, the endpoint of the user’s turn is taken as the starting point of the assistant's turn.
 - For user's turn-taking, a time gap T after the assistant’s turn ends
@@ -291,23 +326,43 @@ is taken as the starting point of the user's turn, where $T \sim \mathcal{N}(0.6
 
 MinMo is trained progressively through four stages of alignment:  (1) Speech-to-Text Alignment, (2) Text-to-Speech Alignment, (3) Speech-to-Speech Alignment, and (4) Duplex Interaction Alignment.
 
-Through the four alignment stages, MinMo gains its end-to-end audio comprehension and generation capabilities while retaining the capabilities of the backbone text LLM, achieving low latency and facilitating a seamless voice chat experience for the user, similar to GPT-4o. The four stages are detailed as follows.
+Through the four alignment stages, MinMo gains its end-to-end audio comprehension and generation capabilities while retaining the capabilities of the backbone text LLM, achieving low latency and facilitating a seamless voice chat experience for the user, similar to GPT-4o.
+The four stages are detailed as follows.
 
 #### Speech-to-Text Alignment
 
-This first stage aligns the audio modality's input latent space and the semantic space of a pre-trained text LLM using Speech-to-Text data shown in Table \ref{tab:MinMo_data}. This phase includes stepwise updates of the Input Projector and Voice Encoder in Figure~\ref{fig:MinMo}, as well as updating the text LLM using LoRA. Considering that the Voice Encoder and LLM (Qwen2.5-7B) are pre-trained while the Input Projector's parameters are randomly initialized, we perform a pre-alignment training (\textbf{Pre-align}) using a subset of the Speech-to-Text data shown in Table.02, updating only the Input Projector. This Pre-align phase effectively prevents the randomly initialized parameters from having large-gradient influences on the pre-trained Voice Encoder at the initial training stage. After Pre-align, we use the full Speech-to-Text data for training both the Input Projector and the Voice Encoder while keeping LLM parameters frozen—a process called \textbf{Full-Align}. Following Full-Align, \textbf{instruction fine-tuning (SFT)} is conducted using approximately 1.3 million samples covering various tasks. During this stage, LLM is updated using LoRA, enhancing the model's ability to follow instructions. The specific data proportions used in the Full-Align and SFT stages are illustrated in Figure~\ref{fig:S2T_Data}. The Pre-Align phase uses about 1/10 of the Full-Align data.
+This first stage aligns the audio modality's input latent space and the semantic space of a pre-trained text LLM using Speech-to-Text data shown in Table \ref{tab:MinMo_data}.
+This phase includes stepwise updates of the Input Projector and Voice Encoder in Figure~\ref{fig:MinMo}, as well as updating the text LLM using LoRA.
+Considering that the Voice Encoder and LLM (Qwen2.5-7B) are pre-trained while the Input Projector's parameters are randomly initialized, we perform a pre-alignment training (\textbf{Pre-align}) using a subset of the Speech-to-Text data shown in Table.02, updating only the Input Projector.
+This Pre-align phase effectively prevents the randomly initialized parameters from having large-gradient influences on the pre-trained Voice Encoder at the initial training stage.
+After Pre-align, we use the full Speech-to-Text data for training both the Input Projector and the Voice Encoder while keeping LLM parameters frozen—a process called \textbf{Full-Align}.
+Following Full-Align, \textbf{instruction fine-tuning (SFT)} is conducted using approximately 1.3 million samples covering various tasks.
+During this stage, LLM is updated using LoRA, enhancing the model's ability to follow instructions.
+The specific data proportions used in the Full-Align and SFT stages are illustrated in Figure~\ref{fig:S2T_Data}.
+The Pre-Align phase uses about 1/10 of the Full-Align data.
 
 #### Text-to-Speech Alignment
 
-This second stage aligns the semantic space of the text LLM with the audio modality's output latent space, using Text-to-Speech data. This phase first trains the Output Projector and then jointly trains the Output Projector and the Voice Token LM while keeping other MinMo parameters frozen. In addition to the basic text-to-speech functionality, we leverage the end-to-end framework to enable MinMo to follow user instructions in voice interactions, delivering more expressive and entertaining audio responses. For instance, user can control the emotion, speaking rate, dialectal accent, or speaker style of the audio output via instructions. Approximately 1,000 hours of Instruct Speech Synthesis data are constructed, formatted as shown in Table~\ref{tab:example_instruct}.
+This second stage aligns the semantic space of the text LLM with the audio modality's output latent space, using Text-to-Speech data.
+This phase first trains the Output Projector and then jointly trains the Output Projector and the Voice Token LM while keeping other MinMo parameters frozen.
+In addition to the basic text-to-speech functionality, we leverage the end-to-end framework to enable MinMo to follow user instructions in voice interactions, delivering more expressive and entertaining audio responses.
+For instance, user can control the emotion, speaking rate, dialectal accent, or speaker style of the audio output via instructions.
+Approximately 1,000 hours of Instruct Speech Synthesis data are constructed, formatted as shown in Table~\ref{tab:example_instruct}.
 
 #### Speech-to-Speech Alignment
 
-This third stage continues training of MinMo using about 10,000 hours of paired audio data. Consistent with the Text-to-Speech Alignment phase, we continue updating only the Output Projector and the Voice Token LM. The training data for speech-to-speech alignment includes not only general speech-to-speech dialogues but also audio generation instructions with various settings, such as adopting specific dialects, speaking rates, and emotions for spoken dialogues. We find that even without updating the LLM, just by leveraging embeddings aligned with a small-scale instruction dataset (<150 hours), the large model can still learn quite effective control capabilities for audio generation.
+This third stage continues training of MinMo using about 10,000 hours of paired audio data.
+Consistent with the Text-to-Speech Alignment phase, we continue updating only the Output Projector and the Voice Token LM.
+The training data for speech-to-speech alignment includes not only general speech-to-speech dialogues but also audio generation instructions with various settings, such as adopting specific dialects, speaking rates, and emotions for spoken dialogues.
+We find that even without updating the LLM, just by leveraging embeddings aligned with a small-scale instruction dataset (<150 hours), the large model can still learn quite effective control capabilities for audio generation.
 
 #### Duplex Interaction Alignment
 
-After completing the first three training stages, MinMo acquires capabilities for audio understanding, audio generation, and half-duplex voice conversation. On this foundation, we further add a full-duplex module trained with 4,000 hours of long-form human-human spoken conversation. The Full Duplex Predictor module is exclusively trained during this stage. The Full Duplex Predictor takes the hidden embeddings of the LLM as input to predict whether the model needs to generate a response. The Full Duplex Predictor leverages the LLM's inherent semantic understanding capabilities to determine: 1) whether the model should respond to the current user query, and 2) whether the model should stop ongoing audio output to listen to the user query and provide an appropriate response.
+After completing the first three training stages, MinMo acquires capabilities for audio understanding, audio generation, and half-duplex voice conversation.
+On this foundation, we further add a full-duplex module trained with 4,000 hours of long-form human-human spoken conversation.
+The Full Duplex Predictor module is exclusively trained during this stage.
+The Full Duplex Predictor takes the hidden embeddings of the LLM as input to predict whether the model needs to generate a response.
+The Full Duplex Predictor leverages the LLM's inherent semantic understanding capabilities to determine: 1) whether the model should respond to the current user query, and 2) whether the model should stop ongoing audio output to listen to the user query and provide an appropriate response.
 
 ## 4·Experiments: 实验
 
